--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/83e5313878.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Rs clone</title>
     <link
       rel="stylesheet"
